creating breaks in line graph from -77 and -88 polity2 scores

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@ const svg = d3.select("#my_dataviz")
       .attr("stroke", "red")
       .attr("stroke-width", 1.5)
       .attr("d", d3.line()
+          .defined(function(d) { return d.polity2 != 0; })
         .x(function(d) { return x(d.year) })
-        .y(function(d) { return y(d.polity2) })
+          .y(function(d) { return y(d.polity2) })
         )
 
                 })
