--- a/index.html
+++ b/index.html
@@ -2,59 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Chnges in U.S. Polity Scores, 1776-2018</title>
         <script src="https://d3js.org/d3.v6.js"></script>
     </head>
     <body>
-        <div id="my_dataviz"></div>
-        <script>
-            // set the dimensions and margins of the graph
-const margin = {top: 10, right: 30, bottom: 30, left: 60},
-        width = 800 - margin.left - margin.right,
-        height = 400 - margin.top - margin.bottom;
-
-// append the svg object to the body of the page
-const svg = d3.select("#my_dataviz")
-    .append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-    .append("g")
-    .attr("transform", `translate(${margin.left}, ${margin.top})`);
-
-    d3.csv("https://raw.githubusercontent.com/newton-c/US_competitve_elections/main/p5v2018.csv")
-        .then( function(data) {
-
-    // Add X axis
-    const x = d3.scaleLinear()
-    .domain([1775, 2018])
-    .range([ 0, width ]);
-    svg.append("g")
-    .attr("transform", `translate(0, ${height})`)
-    .call(d3.axisBottom(x));
-
-    // Add Y axis
-    const y = d3.scaleLinear()
-    .domain([-10, 10])
-    .range([ height, 0]);
-    svg.append("g")
-    .call(d3.axisLeft(y));
-
-    r = d3.scaleLinear()
-    .domain([0, 52.11])
-    .range([0, 60])
-
-     svg.append("path")
-      .datum(data)
-      .attr("fill", "none")
-      .attr("stroke", "red")
-      .attr("stroke-width", 1.5)
-      .attr("d", d3.line()
-          .defined(function(d) { return d.polity2 != 0; })
-        .x(function(d) { return x(d.year) })
-          .y(function(d) { return y(d.polity2) })
-        )
-
-                })
+        <div id="polity2"></div>
+        <svg>
+            <g id="polity2"></g>
+        </svg>
+        <div id="polcomp"></div>
+        <svg>
+            <g id="polcomp"></g>
+        </svg>
+        <script src="app.js" charset="utf-8">
         </script>
     </body>
 </html>
