adding basic HTML titles

--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
         <script src="https://d3js.org/d3.v6.js"></script>
     </head>
     <body>
+        <center>
+        <h1 "color: black;">Changes in U.S. Polity Scores, 1776-2018</h1>
+            <h2>Polity 2</h2>
         <div id="polity2"></div>
         <svg>
             <g id="polity2"></g>
         </svg>
+            <h2>Political Competition</h2>
         <div id="polcomp"></div>
         <svg>
             <g id="polcomp"></g>
         </svg>
+        </center>
         <script src="app.js" charset="utf-8">
         </script>
     </body>
